[package]
name = "steamctl"
version = "0.1.0"
authors = ["Teoh Han Hui <teohhanhui@gmail.com>"]
edition = "2021"
rust-version = "1.79"
description = "Port of steamctl to Rust."
repository = "https://github.com/teohhanhui/steamctl-rs"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.81"
bpaf = "0.9.10"
effing-macros = { git = "https://github.com/rosefromthedead/effing-mad"}
effing-mad = { git = "https://github.com/rosefromthedead/effing-mad" }
gethostname = "0.4.3"
parking_lot = { version = "0.12.1", features = ["nightly"] }
reqwest = { version = "0.11.27", default-features = false, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls-native-roots"] }
secrecy = "0.8.0"
steamguard = { git = "https://github.com/dyc3/steamguard-cli", version = "0.13.0" }
termios = "0.3.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[patch.'https://github.com/rosefromthedead/effing-mad']
effing-macros = { git = "https://github.com/teohhanhui/effing-mad", branch = "effects-macro-vis" }
